<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/total"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/total_text"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total" />

    <RadioGroup
        android:id="@+id/opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/opcionExcelente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"
        >

        <RadioButton
            android:id="@+id/opcionExcelente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_excelente"
            />

        <RadioButton
            android:id="@+id/opcionBien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_bien"
            />

        <RadioButton
            android:id="@+id/opcionOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_ok"
            />

    </RadioGroup>

    <Switch
        android:id="@+id/switchRedondear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/redondear"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/opciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/calcularBoton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchRedondear"
        />

    <TextView
        android:id="@+id/propina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calcularBoton"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>